fixed alignment

--- a/src/app/modules/admin/external-projects/external-project-details/external-project-details.component.scss
+++ b/src/app/modules/admin/external-projects/external-project-details/external-project-details.component.scss
@@ -1,5 +1,5 @@
 .inventory-grid {
-    grid-template-columns: 250px 150px auto auto 100px;
+    grid-template-columns: 30% 10% 20% 20% auto;
 }
 
 .btnLoader {
